<resources>
    <string name="app_name">MTC</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="field_required">This field required</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="login_input_error">Check above errors</string>
    <string name="no_child">No Child Added</string>
    <string name="child_name">Child Name</string>
    <string name="father_name">Father\'s Name</string>
    <string name="mother_name">Mother\'s Name</string>
    <string name="child_age">Child Age(in Month)</string>
    <string name="phone">Phone Number</string>
    <string name="child_weight">Weight(in kg)</string>
    <string name="child_height">Height(in cm)</string>
    <string name="address">Address</string>
    <string name="gram_panchayat">Gram Panchayat</string>
    <string name="block">Block</string>
    <string name="division">Division</string>
    <string name="district">District</string>
    <string name="bpl">BPL</string>
    <string name="dob">DOB: 21/03/2017</string>
    <string name="save">Save</string>
    <string name="edit_child">Edit Child</string>
    <string name="send">Send to mtc</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Enter your Email</string>
    <string name="next">Next</string>
    <string name="not_ls">You are not a LS</string>
    <string name="shared_file_user">User</string>
    <string name="name_key_shared">NAME</string>
    <string name="state_key_shared">STATE</string>
    <string name="district_key_shared">DISTRICT</string>
    <string name="centre_key_shared">CENTRE</string>
    <string name="block_key_shared">BLOCK</string>
    <string name="address_key_shared">ADDRESS</string>
    <string name="invalid_height">Enter a Valid Height</string>
    <string name="invalid_weight">Enter a Valid Weight</string>
    <string name="invalid_phone">Enter a Valid Phone Number</string>
    <string name="invalid_age">Enter a valid Age</string>
    <string name="invalid_name">Enter Parents name</string>
    <string name="invalid_parent">Enter a Parent Name</string>
    <string name="update">Update</string>
    <string name="parent">Parent not supporting</string>
    <string name="houseVisit">How many times visited their parents..??</string>
    <string name="parent_summary">Enter Your Summary</string>
    <string name="invalid_number">Enter a valid number</string>
    <string name="more_details">Enter more Details</string>
    <string name="uid_key_shared">UID</string>
    <string name="unapproved">Un Approved</string>
    <string name="approved">Approved</string>
    <string name="treated">Treated</string>
    <string name="all">All</string>
    <string name="underTreatment">UnderTreatment</string>
    <string name="ls_name">Name :-</string>
    <string name="ls_email">Email  :-</string>
    <string name="ls_phone">Phone :-</string>
    <string name="ls_centre">MTC :-</string>
    <string name="waitingList">Waiting List :-</string>
    <string name="submit">Submit</string>
    <string name="payment">Payment</string>
    <string name="diet">Food condition</string>
    <string name="anm">Talk with ANM</string>
    <string name="mtc">Talk with incharege</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>
    <string name="logo">Logo</string>
    <string name="Poshan">राष्ट्रीय पोषण मिशन</string>
    <string name="child_image">Child Image</string>
</resources>
